added: missing functions.